--- a/Snake game.html
+++ b/Snake game.html
@@ -83,6 +83,7 @@ body{
     border-radius: 50%;
     cursor: pointer;
 	box-shadow: 2px 2px 10px 2px rgba(0,0,0,0.1), inset -10px -10px 10px rgba(0,0,0,0.1), inset 10px 10px 10px rgba(255,255,255,0.2);
+	user-select: none;
 }
 
 #botao-menor{
@@ -161,6 +162,10 @@ body{
 	
 	#canvas{
 		width: calc(100% - 8px);
+	}
+	
+	#fps{
+		display: none;
 	}
 }
 
