--- a/Snake game.html
+++ b/Snake game.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Snake Game</title>
 <meta name="author" content="Allan Jales https://github.com/allanjales/">
-<meta name="theme-color" content="#AEAEAE">
+<meta name="theme-color" content="#AAAAAA">
 
 <style>
 html{
