--- a/Snake game.html
+++ b/Snake game.html
@@ -150,14 +150,15 @@ body{
 @media (max-width: 520px) {
 	#game{
 		width: calc(100% - 20px);
-		height: calc(100vh - 20px);
+		min-height: calc(100vh - 20px);
+		height: auto;
 		border-radius: 0;
 		margin-top: 0;
 		box-shadow: none;
 		}
 	
 	#screen, #button-holder{
-		width: 80%;
+		width: 95%;
 	}
 	
 	#canvas{
